anasayfa stil güncellemesi

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <main>
       <!-- 1. Section: Ana Başlık Buton -->
       <section class="title-area">
-        <h1 class="title-area">Effective Solutions for Your Business</h1>
+        <h1 class="title-text">Effective Solutions for Your Business</h1>
         <button class="title-button">Order Service</button>
         <!-- Ana Başlık Buton Bitti -->
       </section>
